--- a/styles/app.css
+++ b/styles/app.css
@@ -181,7 +181,7 @@ body {
         text-transform: uppercase;
         font-size: .6rem;
         font-weight: bold;
-        color: color(var(--ad-Color-prim) l(+75%));
+        color: white;
     }
 
 .ad-Result {
